# rocket-control-pi-zero

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
resources/: logs.csv
resources/images/: download_random_images.sh
resources/videos/: slow_motion.avi
resources/yolo/: classes.txt
src/: camera.cpp  common.cpp  opencv-process  opencv-process.cpp  preview-image.cpp  servo.cpp  yolo-integration.cpp
